--- a/config.json
+++ b/config.json
@@ -4,8 +4,8 @@
     "host": "127.0.0.1",
     "user": "root",
     "password": "",
-    "database": "node",
-    "table": "cadastros",
+    "database": "",
+    "table": "",
     "extended": true,
     "publicPath": "public",
     "protocol": "http://",
